# claude-cowork-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/: PKGBUILD  claude-cowork.service
scripts/: install.sh
src/: events.rs  health.rs  lib.rs  main.rs  protocol.rs  server.rs
src/backend/: mod.rs  native.rs  process.rs  remap.rs
src/rpc/: handlers.rs  types.rs
tests/: integration.rs
