[package]
name = "claude-cowork-rs"
version = "0.1.0"
edition = "2024"
description = "Linux daemon for Claude Desktop Cowork (Local Agent Mode)"
license = "MIT"
repository = "https://github.com/bKNNNNN/claude-cowork-rs"
readme = "README.md"
keywords = ["claude", "cowork", "linux", "daemon"]

[lib]
name = "claude_cowork_rs"
path = "src/lib.rs"

[[bin]]
name = "claude-cowork-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "6"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
